--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!-- ========== 씬 1: 인트로 ========== -->
     <div class="scene active" id="scene1">
       <img src="images/memory1.jpg" alt="우리의 추억 사진" class="fade-in" />
-      <h1 class="fade-in" style="animation-delay:0.2s;">연화야 옛날에 지하철에서 기억나?</h1>
+      <h4 class="fade-in" style="animation-delay:0.2s;">연화야 옛날에 지하철에서 기억나?</h4>
       <p class="fade-in" style="animation-delay:0.4s;">
         너가 처음으로 왜 결혼하자고 안 물어보냐고 했을때 기억나??<br />
         그때 지금처럼 지하철을 타고 집으로 가고 있었어
@@ -198,7 +198,7 @@
     <!-- ========== 씬 2: 추억 회상 ========== -->
     <div class="scene" id="scene2">
       <img src="images/memory2.jpg" alt="함께한 순간들" class="fade-in" />
-      <h2 class="fade-in" style="animation-delay:0.2s;">파타고니아 불타는 고구마</h2>
+      <h4 class="fade-in" style="animation-delay:0.2s;">파타고니아 불타는 고구마</h4>
       <p class="fade-in" style="animation-delay:0.4s;">
         2022년 겨울, 교대에서 이야기를 할 때 넌 나의 운명이라고 바로 느꼈어.<br />
         그래서 그 해 겨울에 파타고니아에 가서 프로포즈를 하자고 다짐했어.<br />
@@ -209,8 +209,22 @@
       </button>
     </div>
 
+    <!-- ========== 씬 3: 인트로 ========== -->
+    <div class="scene active" id="scene3">
+      <img src="images/memory3.jpg" alt="우리의 추억 사진" class="fade-in" />
+      <h4 class="fade-in" style="animation-delay:0.2s;">파타고니아 불타는 고구마</h4>
+      <p class="fade-in" style="animation-delay:0.4s;">
+        2022년 겨울, 교대에서 이야기를 할 때 넌 나의 운명이라고 바로 느꼈어.<br />
+        그래서 그 해 겨울에 파타고니아에 가서 프로포즈를 하자고 다짐했어.<br />
+        하지만 파타고니아에는 갈 수 없었어.
+      </p>
+      <button class="btn fade-in" style="animation-delay:0.6s;" onclick="nextScene(4)">
+        다음으로
+      </button>
+    </div>
+
     <!-- ========== 씬 3: 프로포즈 ========== -->
-    <div class="scene" id="scene3">
+    <div class="scene" id="scene4">
       <img src="images/proposal.jpg" alt="프러포즈" class="fade-in" />
       <h2 class="fade-in" style="animation-delay:0.2s;">Will You Marry Me?</h2>
       <p class="fade-in" style="animation-delay:0.4s;">
