--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
 
     <!-- ========== 씬 3: 인트로 ========== -->
-    <div class="scene active" id="scene3">
+    <div class="scene" id="scene3">
       <img src="images/memory3.jpg" alt="우리의 추억 사진" class="fade-in" />
       <h4 class="fade-in" style="animation-delay:0.2s;">파타고니아 불타는 고구마</h4>
       <p class="fade-in" style="animation-delay:0.4s;">
