--- a/index.html
+++ b/index.html
@@ -185,38 +185,59 @@
     <!-- ========== 씬 1: 인트로 ========== -->
     <div class="scene active" id="scene1">
       <img src="images/memory1.jpg" alt="우리의 추억 사진" class="fade-in" />
-      <h4 class="fade-in" style="animation-delay:0.2s;">연화야 옛날에 지하철에서 기억나?</h4>
+      <h4 class="fade-in" style="animation-delay:0.2s;">우리 처음 만나게 된 날</h4>
       <p class="fade-in" style="animation-delay:0.4s;">
-        너가 처음으로 왜 결혼하자고 안 물어보냐고 했을때 기억나??<br />
-        그때 지금처럼 지하철을 타고 집으로 가고 있었어
+        2022년 겨울, 교대에서 산책하며 이야기를 할 때 <br />
+        넌 나의 운명이라고 느꼈어.<br />
+        그래서 그 해 겨울에 파타고니아에 가서 불타는 고구마를 보며<br />
+        프로포즈를 하자고 다짐했어.<br />
+
       </p>
       <button class="btn fade-in" style="animation-delay:0.6s;" onclick="nextScene(2)">
         다음으로
       </button>
     </div>
 
-    <!-- ========== 씬 2: 추억 회상 ========== -->
+
     <div class="scene" id="scene2">
-      <img src="images/memory2.jpg" alt="함께한 순간들" class="fade-in" />
+      <img src="images/memory2.jpg" alt="파타고니아 사진진" class="fade-in" />
       <h4 class="fade-in" style="animation-delay:0.2s;">파타고니아 불타는 고구마</h4>
       <p class="fade-in" style="animation-delay:0.4s;">
-        2022년 겨울, 교대에서 이야기를 할 때 넌 나의 운명이라고 바로 느꼈어.<br />
-        그래서 그 해 겨울에 파타고니아에 가서 프로포즈를 하자고 다짐했어.<br />
-        하지만 파타고니아에는 갈 수 없었어.
+        하지만 파타고니아에는 갈 수 없었어...<br />
+        그리고...<br />
+        연화야 옛날에 지하철에서 기억나?<br />
       </p>
       <button class="btn fade-in" style="animation-delay:0.6s;" onclick="nextScene(3)">
-        더 알고 싶어!
+        다음으로
+      </button>
+    </div>
+
+
+    <!-- ========== 씬 2: 추억 회상 ========== -->
+    <div class="scene" id="scene3">
+      <img src="images/memory3.jpg" alt="함께한 순간들" class="fade-in" />
+      <h4 class="fade-in" style="animation-delay:0.2s;">우리 새해 첫 북한산 </h4>
+      <p class="fade-in" style="animation-delay:0.4s;">
+
+        그때 지금처럼 지하철을 타고 집으로 가고 있었어<br />
+        너가 처음으로 나에게 왜 결혼하자고 안 물어보냐고 했을때 기억나??<br />
+        혹시 기억나면 <br />
+        지금 그 날로 같이 돌아가 볼래?
+        
+      </p>
+      <button class="btn fade-in" style="animation-delay:0.6s;" onclick="nextScene(4)">
+        다음으로
       </button>
     </div>
 
     <!-- ========== 씬 3: 인트로 ========== -->
-    <div class="scene" id="scene3">
-      <img src="images/memory3.jpg" alt="우리의 추억 사진" class="fade-in" />
-      <h4 class="fade-in" style="animation-delay:0.2s;">파타고니아 불타는 고구마</h4>
+    <div class="scene" id="scene4">
+      <img src="images/memory4.jpg" alt="우리의 추억 사진" class="fade-in" />
+      <h4 class="fade-in" style="animation-delay:0.2s;">넌 내 전부야</h4>
       <p class="fade-in" style="animation-delay:0.4s;">
-        2022년 겨울, 교대에서 이야기를 할 때 넌 나의 운명이라고 바로 느꼈어.<br />
-        그래서 그 해 겨울에 파타고니아에 가서 프로포즈를 하자고 다짐했어.<br />
-        하지만 파타고니아에는 갈 수 없었어.
+        그 떄 내가 먼저 결혼하자고 말 하고 싶었는데.. 아무런 준비가 안 됐었던 날..<br />
+        지금은 준비 됐는데.. 지금 말해도 괜찮을까?<br />
+        
       </p>
       <button class="btn fade-in" style="animation-delay:0.6s;" onclick="nextScene(4)">
         다음으로
@@ -224,13 +245,11 @@
     </div>
 
     <!-- ========== 씬 3: 프로포즈 ========== -->
-    <div class="scene" id="scene4">
+    <div class="scene" id="scene5">
       <img src="images/proposal.jpg" alt="프러포즈" class="fade-in" />
       <h2 class="fade-in" style="animation-delay:0.2s;">Will You Marry Me?</h2>
       <p class="fade-in" style="animation-delay:0.4s;">
-        그 때 기억나? 내가 지하철에서....
-        내가 먼저 결혼하자고 말 하고 싶었는데.. 아무런 준비가 안됐었던 날..<br />
-        지금은 준비 됐어 지금 말해도 괜찮을까?<br />
+
         나와 결혼해줄래?
       </p>
       <div class="fade-in" style="animation-delay:0.6s;">
@@ -243,9 +262,10 @@
     <div class="scene" id="scene4">
       <h2 id="finalText" class="fade-in"></h2>
       <p class="fade-in" style="animation-delay:0.2s;">
-        함께 걸어갈 더 많은 추억,<br />
-        우리 둘만의 새로운 이야기를 써 내려가자.<br />
-        사랑해.
+        연화야 사랑해 고마워
+        앞으로 함께 걸어갈 더 많은 추억,<br />
+        우리 둘만의 새롭고 행복한 이야기를 함께써 내려가자<br />
+        사랑해
       </p>
     </div>
   </div>
