--- a/index.html
+++ b/index.html
@@ -182,9 +182,23 @@
 </head>
 <body>
   <div class="container">
-    <!-- ========== 씬 1: 인트로 ========== -->
+
+        <!-- ========== 씬 1: 인트로 ========== -->
     <div class="scene active" id="scene1">
       <img src="images/memory1.jpg" alt="우리의 추억 사진" class="fade-in" />
+      <h4 class="fade-in" style="animation-delay:0.2s;">우리 처음 만나게 된 날</h4>
+      <p class="fade-in" style="animation-delay:0.4s;">
+        연화야 우리 지하철 역에서 그때 기억나?<br />
+
+      </p>
+      <button class="btn fade-in" style="animation-delay:0.6s;" onclick="nextScene(2)">
+        다음으로
+      </button>
+    </div>
+    
+    <!-- ========== 씬 2: 인트로 ========== -->
+    <div class="scene" id="scene2">
+      <img src="images/memory2.jpg" alt="우리의 추억 사진" class="fade-in" />
       <h4 class="fade-in" style="animation-delay:0.2s;">우리 처음 만나게 된 날</h4>
       <p class="fade-in" style="animation-delay:0.4s;">
         2022년 겨울, 교대에서 산책하며 이야기를 할 때 <br />
