--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@
 <!-- 두 번째 씬 (scene2): 기존 scene1의 본문 내용 -->
 <div class="scene" id="scene2">
   <img src="images/memory1.jpg" alt="우리의 추억 사진" class="fade-in" />
-  <h4 class="fade-in" style="animation-delay:0.2s;">2022년 겨울 이야기</h4>
+  <h4 class="fade-in" style="animation-delay:0.2s;">2022년 우리의 첫 겨울 이야기</h4>
   <p class="fade-in" style="animation-delay:0.4s;">
     2022년 겨울, 교대에서 산책하며 이야기를 할 때<br />
-    넌 나의 운명이라고 느꼈어.<br />
-    그래서 그 해 겨울에 파타고니아에 가서 불타는 고구마를 보며<br />
-    프로포즈를 하자고 다짐했어.<br />
+    넌 나의 운명이라고 느꼈어<br />
+    그래서 그 해 겨울에 파타고니아에 가서<br />
+    프로포즈를 하자고 다짐했어<br />
   </p>
   <button class="btn fade-in" style="animation-delay:0.6s;" onclick="nextScene(3)">
     다음으로
@@ -227,8 +227,8 @@
   <h4 class="fade-in" style="animation-delay:0.2s;">기억나??</h4>
   <p class="fade-in" style="animation-delay:0.4s;">
     너가 처음으로 나에게 <br />
-    “왜 결혼하자고 안 물어보냐고?” 했을 때,<br />
-    그때 지금처럼 지하철을 타고 집으로 가고 있었어.<br /><br />
+    “왜 결혼하자고 안 물어보냐고” 했을 때,<br />
+    그때 지금처럼 지하철을 타고 집으로 가고 있었어<br /><br />
     지금 그 날로 같이 돌아가 볼래?
   </p>
   <button class="btn fade-in" style="animation-delay:0.6s;" onclick="nextScene(5)">
@@ -243,7 +243,7 @@
   <p class="fade-in" style="animation-delay:0.4s;">
     그 때, 사실 내가 먼저<br />
     '결혼하자'고 말하고 싶었는데... <br />
-    지금은 준비 됐어. 이제 말해도 괜찮을까?
+    지금은 준비 됐어. 그때 하지 못 한말 지금 말해도 괜찮을까?
   </p>
   <button class="btn fade-in" style="animation-delay:0.6s;" onclick="nextScene(6)">
     다음으로
@@ -270,7 +270,8 @@
   <h4 id="finalText" class="fade-in" style="animation-delay:0.2s;">사랑해 김연화</h4>
   <p class="fade-in" style="animation-delay:0.4s;">
     앞으로 함께 걸어갈 더 많은 추억,<br />
-    우리 둘만의 새롭고 행복한 이야기를 함께 써 내려가자<br />
+    우리 둘만의 새롭고 행복한 이야기를 <br />
+    함께 써 내려가자<br />
     사랑해
   </p>
 </div>
