--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 <!-- 일곱 번째 씬 (scene7): 기존 scene6 + 사진 추가 -->
 <div class="scene" id="scene7">
   <!-- 마지막 장면에 사진 추가 -->
-  <img src="images/final.jpg" alt="마지막 장면" class="fade-in" />
+  <img src="images/2롤27.jpeg" alt="마지막 장면" class="fade-in" />
   <h4 id="finalText" class="fade-in" style="animation-delay:0.2s;"></h4>
   <p class="fade-in" style="animation-delay:0.4s;">
     앞으로 함께 걸어갈 더 많은 추억,<br />
