--- a/index.html
+++ b/index.html
@@ -224,10 +224,9 @@
 <!-- 네 번째 씬 (scene4): 기존 scene3 내용 -->
 <div class="scene" id="scene4">
   <img src="images/memory3.jpg" alt="함께한 순간들" class="fade-in" />
-  <h4 class="fade-in" style="animation-delay:0.2s;">기억나??</h4>
+  <h4 class="fade-in" style="animation-delay:0.2s;">"왜 결혼하자고 안 물어보냐고"</h4>
   <p class="fade-in" style="animation-delay:0.4s;">
-    너가 처음으로 나에게 <br />
-    “왜 결혼하자고 안 물어보냐고” 했을 때,<br />
+    처음으로 나에게 결혼에대해 물어 봤을 때,<br />
     그때 지금처럼 지하철을 타고 집으로 가고 있었어<br /><br />
     지금 그 날로 같이 돌아가 볼래?
   </p>
